# frontdesk

./: .gitignore  CLAUDE.md  CODING_PRINCIPLES.md  Makefile  README.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_saas_config_tables.py  0003_account.py  0004_usage_counter.py  0005_telegram_poll_offset.py  0006_business_service_description.py  0007_service_schedule_business_address.py  0008_business_online.py  0009_business_locale.py  0010_service_max_advance_days.py  0011_service_intake.py  0012_service_requires_confirmation.py  0013_business_owner_name.py  0014_approval_queue.py  0014_customer_handoff.py  0015_approval_queue.py  0016_service_groups.py  0017_backfill_default_groups.py  0018_repoint_appointments_to_group.py  0019_owner_telegram.py  0020_account_sessions_valid_after.py  0021_account_role.py  0022_analytics_created_at.py  0023_analytics_indexes.py  0024_business_entitlement.py  0025_demo_lead.py  0026_customer_fact.py
apps/api/scripts/: demo.py  eval_live.py  mock_telegram.py  promote_admin.py  seed.py
apps/api/src/frontdesk/: __init__.py
apps/api/src/frontdesk/application/: __init__.py  admin_provisioning.py  analytics.py  analytics_models.py  appointments.py  assistant.py  customer_memory.py  datetime_format.py  entitlements.py  owner_actions.py  owner_linking.py  owner_notifier.py  ports.py  worker.py
apps/api/src/frontdesk/core/: __init__.py  settings.py
apps/api/src/frontdesk/domain/: __init__.py  availability.py  (+9 more)
apps/api/tests/: __init__.py  assistant_deps.py  port_contracts.py  test_settings.py
apps/api/tests/application/: __init__.py  test_account.py  test_admin_provisioning.py  test_analytics.py  test_analytics_models.py  test_appointments.py  test_assistant.py  test_confirmation.py  test_customer_memory.py  test_datetime_format.py  test_entitlement_use_cases.py  test_feature_access.py  test_owner_linking.py  test_owner_messaging.py  test_owner_notifier.py  test_service_groups.py  test_system_prompt.py  test_voice_stream.py  world.py
apps/api/tests/core/: test_settings.py
apps/api/tests/domain/: test_availability.py  test_customer_memory.py  test_entitlements.py  test_enums.py  test_models.py  test_money.py  test_notifications.py  test_transitions.py
apps/api/tests/evals/: __init__.py  test_behavior.py
apps/api/tests/infrastructure/: test_airlock_gate.py  test_analytics_memory.py  test_channels.py  test_composite.py  test_events.py  test_google_oauth.py  test_llm_recorder.py  test_logging_setup.py  test_memory.py  test_owner_sender.py  test_providers.py  test_rate_limit.py  test_secrets.py  test_sms.py  test_telegram_format.py  test_telegram_messaging.py
apps/api/tests/integration/: __init__.py  conftest.py  test_postgres.py  test_postgres_analytics.py  test_postgres_customer_memory.py  test_postgres_entitlements.py
apps/api/tests/interface/: __init__.py  test_account_api.py  test_admin_api.py  test_admin_entitlements_api.py  test_admin_guard.py  test_appointments_api.py  test_approvals.py  test_auth.py  test_business_config.py  test_chat.py  test_client_ip.py  test_config_api.py  test_customer_facts_api.py  test_demo_api.py  test_feature_registry.py  test_features_api.py  test_google_auth.py  test_metrics_api.py  test_onboarding_flow.py  test_owner_link_command.py  test_owner_telegram.py  test_read_api.py  test_telegram_connect.py  test_telegram_poller.py  test_telegram_webhook.py  test_tenancy.py  test_webhooks.py  test_worker.py
(+255 files in other folders)
