[project]
name = "frontdesk"
version = "0.0.0"
description = "An AI front desk for small service businesses — answers, books, and reminds."
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Fedor Chishchin" }]
dependencies = [
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "sqlalchemy[asyncio]>=2.0.51",
  "asyncpg>=0.31.0",
  "alembic>=1.18.4",
  "httpx>=0.28.1",
  "fastapi>=0.138.0",
  "uvicorn[standard]>=0.34.0",
  "airlock-hitl>=0.1.1",
  "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.19",
  "mypy>=2.1.0",
  "import-linter>=2.12",
]

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontdesk"]

# ----- Lint & format -----
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]
extend-exclude = ["alembic", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "DTZ", "PT", "RET", "C4", "TID", "ANN", "PLR"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
# Localized customer-facing strings (Russian/Chinese) — non-Latin glyphs are the point.
"src/frontdesk/interface/telegram_phrases.py" = ["RUF001"]
"src/frontdesk/interface/telegram_inbound.py" = ["RUF001"]
"src/frontdesk/application/assistant.py" = ["RUF001"]
"src/frontdesk/application/owner_actions.py" = ["RUF001"]
"src/frontdesk/application/datetime_format.py" = ["RUF001"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Query", "fastapi.Header", "fastapi.Depends", "fastapi.Path"]

# ----- Types -----
[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/frontdesk", "tests"]
mypy_path = "src"

# ----- Tests -----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# The default run is unit-only (no database). Integration tests live in
# tests/integration and run against a real Postgres via `make test-integration`.
addopts = "--ignore=tests/integration --cov=frontdesk --cov-report=term-missing --cov-fail-under=90 -q"

[tool.coverage.run]
branch = true
source = ["frontdesk"]
# The DB adapters need Postgres; they're exercised by the integration suite
# (the same port contracts), so they're omitted from the unit-coverage gate.
omit = [
    "*/infrastructure/db.py",
    "*/infrastructure/postgres/*",
    "*/interface/app.py",
    "*/interface/run_worker.py",
    "*/interface/run_telegram_poller.py",
]

# ----- Hexagonal import boundaries -----
[tool.importlinter]
root_package = "frontdesk"

[[tool.importlinter.contracts]]
name = "Domain is pure — no outward dependencies"
type = "forbidden"
source_modules = ["frontdesk.domain"]
forbidden_modules = [
  "frontdesk.application",
  "frontdesk.infrastructure",
  "frontdesk.interface",
  "frontdesk.core",
]

[[tool.importlinter.contracts]]
name = "Application depends only on the domain"
type = "forbidden"
source_modules = ["frontdesk.application"]
forbidden_modules = [
  "frontdesk.infrastructure",
  "frontdesk.interface",
  "frontdesk.core",
]

[[tool.importlinter.contracts]]
name = "Driven and driving adapters do not import each other"
type = "forbidden"
source_modules = ["frontdesk.infrastructure"]
forbidden_modules = ["frontdesk.interface"]
